turmites.lessons.turmites.langton.Langton.scala.code
def step() {
	def changerCouleur(c:Color) ={
		setCouleur(c)
		baisseBrosse
		leveBrosse
	}

	if (getCouleurSol==Color.white) {
		changerCouleur(Color.black)
		droite
	}
	if (getCouleurSol==Color.black) {
		changerCouleur(Color.white)
		gauche
	}
	avance
}
